Aula 22/11/2024 conteúdo da aula

--- a/bairros.html
+++ b/bairros.html
@@ -92,7 +92,7 @@
           <td>consolação</td>
           <td>centro</td>
           <td>seguro</td>
-          <td>av paulista</td>
+          <td>Av paulista</td>
         </tr>
         <tr>
           <td>pompeia</td>
