--- a/bairros.html
+++ b/bairros.html
@@ -177,6 +177,20 @@
 
 
 
+     <!-- Rodapé do site-->
+
+     <footer>
+      <div>
+        &copy; 2024 | site de exemplo | Créditos 
+    </div>
+    <div>
+      <a href="https://facebook.com" target="_blank"><i class="bi bi-facebook"></i></a>
+      <a href="https://youtube.com" target="_blank"><i class="bi bi-youtube"></i></a>
+      <a href="https:instagram.com" target="_blank"><i class="bi bi-instagram"></i></a>
+      <a href="https:whatsapp.com" target="_blank"><i class="bi bi-whatsapp"></i></a>
+    </div>
+
+     </footer>
 
 
 
